corrected spacing in album view.

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -57,6 +57,8 @@ body.landing .navbar {
     margin-bottom: 0;
   }
 
+.buffer {margin-bottom: 50px;}
+
 .album-header-container {
    margin-top: 55px;
    margin-bottom: 40px;
